--- a/home/home.html
+++ b/home/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="20; url=/about/about.html">
+    <link rel="icon" type="image/svg+xml" href="../Coding.svg" />
 
     <title>Home</title>
     <link
