--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:ital,wght@1,100&family=Rock+Salt&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-  <audio src="./media/audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="true"> </audio>
+  <audio src="/src/audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="true"> </audio>
   <style>
     body {
       margin: 0;
@@ -108,12 +108,12 @@
     <div class="absolute text-center align-width margin">
       <h1 class="text-blue">Hi There</h1>
       <p>I am a creative UX Artist. Specialized in Full-Stack Development. And a Student.</p>
-      <a href="./home/home.html">CLICK ME</a>
+      <a href="./src/pages/home.html">CLICK ME</a>
     </div>
 
   </div>
 
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
 
 </body>
 
