--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -16,7 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:ital,wght@1,100&family=Rock+Salt&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-  <audio src="../media/audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="true"></audio>
+  <audio src="../audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="true"></audio>
   <style>
     body {
       margin: 0;
@@ -136,9 +136,9 @@
   <div id="app">
     <div class="textalign absolute">
       <a class="noborder kampadding" href="/">Home</a>
-      <a class="noborder kampadding" href="../work/work.html">Work</a>
+      <a class="noborder kampadding" href="work.html">Work</a>
       <a style="background-color: #58C0DB;
-      color: whitesmoke;" href="../letstalk/letstalk.html">Let's Talk</a>
+      color: whitesmoke;" href="letstalk.html">Let's Talk</a>
     </div>
     <div class="absolute textcenter marginleft">
       <!-- <h1 class="text-blue">Hi There</h1> -->
@@ -151,7 +151,7 @@
 
   </div>
 
-  <script type="module" src="../main.js"></script>
+  <script type="module" src="../../main.js"></script>
 </body>
 
 </html>
