--- a/src/pages/letstalk.html
+++ b/src/pages/letstalk.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../Coding.svg" />
+    <link rel="icon" type="image/svg+xml" href="Coding.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deepanshu</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:ital,wght@1,100&family=Rock+Salt&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-    <audio src="../media/audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="false"></audio>
+    <audio src="../audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="false"></audio>
     <style>
         body {
             margin: 0;
@@ -147,7 +147,7 @@
     <div id="app">
         <div class="textalign absolute">
             <a class="noborder kampadding" href="/">Home</a>
-            <a class="noborder kampadding" href="../work/work.html">Work</a>
+            <a class="noborder kampadding" href="work.html">Work</a>
             <a style="background-color: #58C0DB;
       color: whitesmoke;">About me</a>
         </div>
@@ -160,7 +160,7 @@
 
     </div>
 
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="../../main.js"></script>
 </body>
 
 </html>
