--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../Coding.svg" />
+    <link rel="icon" type="image/svg+xml" href="Coding.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:ital,wght@1,100&family=Rock+Salt&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-    <audio src="../media/audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="true"></audio>
+    <audio src="../audio/ES_Underwater Ambience 2 - SFX Producer.mp3" autoplay="true" loop="true"></audio>
     <style>
         body {
             margin: 0;
@@ -167,9 +167,9 @@
     <div id="app">
         <div class="textalign absolute">
             <a class="noborder kampadding" href="/">Home</a>
-            <a class="noborder kampadding" href="../about/about.html">About</a>
+            <a class="noborder kampadding" href="about.html">About</a>
             <a style="background-color: #58C0DB;
-      color: whitesmoke;" href="../letstalk/letstalk.html" >Let's Talk</a>
+      color: whitesmoke;" href="letstalk.html">Let's Talk</a>
         </div>
         <div class="absolute textcenter marginleft">
             <br>
@@ -180,7 +180,7 @@
         <div class="content">
             <div class="cont">
                 <div class="imgcont">
-                    <img id="navigations" src="./assets/Screenshot (71).png" alt="">
+                    <img id="navigations" src="../assets/Screenshot (71).png" alt="">
                 </div>
                 <p>
                     Link to project
@@ -189,7 +189,7 @@
             </div>
             <div class="cont">
                 <div class="imgcont">
-                    <img id='fireblog' src="./assets/Screenshot (72).png" alt="">
+                    <img id='fireblog' src="../assets/Screenshot (72).png" alt="">
                 </div>
                 <p>
                     Link to project
@@ -198,7 +198,7 @@
             </div>
             <div class="cont">
                 <div class="imgcont">
-                    <img id='ecom' src="./assets/Screenshot (74).png" alt="">
+                    <img id='ecom' src="../assets/Screenshot (74).png" alt="">
                 </div>
                 <p>
                     Link to project
@@ -210,7 +210,7 @@
 
     </div>
 
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="../../main.js"></script>
 </body>
 
 </html>
