--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="20; url=/about/about.html">
-    <link rel="icon" type="image/svg+xml" href="../Coding.svg" />
+    <meta http-equiv="refresh" content="20; url=about.html">
+    <link rel="icon" type="image/svg+xml" href="Coding.svg" />
 
     <title>Home</title>
     <link
@@ -18,13 +18,13 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-    <audio src="../media/audio/640174main_Wheel Stop.mp3" autoplay="true"> </audio>
+    <audio src="../audio/640174main_Wheel Stop.mp3" autoplay="true"> </audio>
 
 
 </head>
 
 <body class="down">
-    <script type="module" src="./home.js"></script>
+    <script type="module" src="home.js"></script>
     <div class="container">
         <div class="content">
             <h1>The Deep <br>Dimension</h1>
@@ -90,7 +90,7 @@
             console.log("time_changed!")
         }, 10000)
     </script>
-    <script type="module">
+    <!-- <script type="module">
 
         //     let stats;
    //     const position = geometry.attributes.position;
@@ -117,7 +117,7 @@
 
 
 
-    </script>
+    </script> -->
 </body>
 
 </html>
